pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: monapi
spec:
  containers:
  - name: monapi
    image: registry.cluster.wik.cloud/public/echo 
    ports:
    - containerPort: 8080
