service.yml
apiVersion: v1
kind: Service
metadata:
  name: monapi-service
spec:
  selector:
    app: monapi
  ports:
    - protocol: TCP
      port: 80       # Port exposé sur le service
      targetPort: 8080  # Port sur lequel les pods écoutent
  type: ClusterIP    # Type de service ClusterIP
