ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monapi-ingress
spec:
  rules:
  - host: monapi.local  #Mon domaine choisi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monapi-service
            port:
              number: 80
